Excerpt: Wrap in <p> and reduce the words to 30 to avoid large excerpts

--- a/public/css/spc-community-calendar-public.css
+++ b/public/css/spc-community-calendar-public.css
@@ -48,6 +48,7 @@
 .spcc-post-excerpt p {
     font-size: 14px;
     font-weight: 500;
+    margin-bottom: 0;
 }
 
 .spcc-post-actions a {
